<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DisplayOrderDetails">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="18dp"
        android:text="@string/order_head"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textIntent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:onClick="addButtonClicked"
        android:text="@string/save_data_button" />

    <Button
        android:id="@+id/email"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:onClick="sendEmail"
        android:text="@string/email_button" />

    <Button
        android:id="@+id/salesTotal"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:onClick="salesReport"
        android:text="@string/sales_report_button" />
</LinearLayout>